<resources>

    <!-- Strings related to login screen -->
    <string name="app_name">Skjapp</string>
    <string name="hint_username_input">Användarnamn</string>
    <string name="hint_password_input">Lösenord</string>
    <string name="label_add_member_btn">Inte medlem?</string>
    <string name="label_login_btn">Logga in</string>


    <!-- Strings related to profile screen -->
    <string name="label_drive_btn">Köra</string>
    <string name="label_travel_btn">Resa</string>

    <!-- Strings related to add trip -->
    <string name="title_activity_add_trip">Lägg till resa</string>
    <string name="label_start_timepicker_btn">Välj starttid för resa</string>
    <string name="label_start_datepicker_btn">Välj startdatum för resa</string>
    <string name="label_destination_datepicker_btn">Välj sluttid för resa</string>
    <string name="label_destination_timepicker_btn">Välj slutdatum för resa</string>
    <string name="label_save_trip">Spara resa</string>
    <string name="label_passenger_spinner">Välj antal medresenärer</string>
    <string name="label_car_spinner">Välj bil</string>
    <string name="label_save_trip_btn">Spara annons</string>
    <string name="label_start_edittext">Where did you come from?</string>
    <string name="label_destination_edittext">Where did you go?</string>
    <string name="label_leaving_at">Avgångstid</string>
    <string name="label_date_format">yy-MM-dd HH:mm</string>

    <!-- Strings related to map activity -->
    <string name="title_activity_show_available_trips">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_api_key">AIzaSyBlbkhdI1OPE2isr_YRxzbsHJoMLN3_uQk</string>

    <!-- Strings related to register -->
    <string name="title_activity_new_member">Registrera dig</string>
    <string name="prompt_firstname">Förnamn</string>
    <string name="prompt_surname">Efternamn</string>
    <string name="prompt_street">Gatuadress</string>
    <string name="prompt_city">Stad</string>
    <string name="prompt_streetnr">Gatunr.</string>
    <string name="prompt_zipcode">Postnr.</string>
    <string name="prompt_phonenr">Telefonnr.</string>
    <string name="prompt_email">E-postadress</string>
    <string name="prompt_password">Lösenord</string>
    <string name="prompt_password_again">Upprepa lösenord</string>
    <string name="action_sign_in">Registrera</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-postadressen är inte giltig</string>
    <string name="error_invalid_password">Lösenordet för kort, minst 5 tecken</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Fältet måste fyllas i</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

</resources>
