<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gu.itu.skjapp.Presentation.AddTripActivity"
    android:background="@color/light_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/topLinearLayout"
                android:paddingBottom="0px" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:id="@+id/start_address_edittext"
                    android:text="@string/label_start_edittext" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_start_timepicker_btn"
                        android:id="@+id/start_timepicker_btn"
                        android:onClick="showTimePickerDialog" />

                    <Button
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_start_datepicker_btn"
                        android:id="@+id/start_destinationpicker_btn"
                        android:onClick="showDatePickerDialog" />

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:id="@+id/destination_address_edittext"
                    android:text="@string/label_destination_edittext" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_destination_timepicker_btn"
                    android:id="@+id/destination_timepicker_btn"
                    android:onClick="showTimePickerDialog"/>

                    <Button
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_destination_datepicker_btn"
                    android:id="@+id/destination_destinationpicker_btn"
                    android:onClick="showDatePickerDialog"/>

                </LinearLayout>

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topLinearLayout"
                android:layout_marginTop="50dp"
                android:id="@+id/amt_passenger_spinner"
                android:text="@string/label_passenger_spinner" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_car_spinner"
                android:text="@string/label_car_spinner"
                android:layout_below="@+id/amt_passenger_spinner" />

            <Button
                android:text="@string/label_save_trip_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_trip_btn"
                android:layout_below="@+id/select_car_spinner"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_alignParentStart="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
